--- a/src/Page/common/tavbar/navbar.scss
+++ b/src/Page/common/tavbar/navbar.scss
@@ -1,87 +1,32 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  box-sizing: border-box;
+
+.nav_container{
+    background-color: black;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-html {
-  font-size: 62.5%;
-}
-body {
-  font-size: 1.6rem;
-}
-li {
+.nav_container ul{
+  display: flex;
   list-style: none;
+  margin: 0;
+  padding: 0;
 }
-a {
-  font-family: Georgia, 'Times New Roman', Times, serif;
+.nav_container li a{
+  color: inherit;
+  display: block;
+  padding: 10px 15px;
   text-decoration: none;
-  color: rgb(0, 0, 0);
+}
+.nav_container li:hover{
+  background-color: rgb(255, 193, 252);
+  color: black;
+}
+.nav_right{
+  display: block;
+  padding: 10px 15px;
+  background-color: rgb(255, 193, 252);
+  color: black;
+  border-radius: 10px;
 }
 
-.nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  height: 8vh;
-  background: rgb(255, 255, 255);
-}
-.nav__brand {
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 30px;
-}
-
-.nav__menu {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  gap: 3rem;
-}
-.nav__toggler {
-  display: none;
-}
-.nav__toggler div {
-  width: 2.5rem;
-  height: 0.2rem;
-  margin: 0.4rem;
-  background: rgb(0, 0, 0);
-  transition: 0.3s ease-in;
-}
-
-@media screen and (max-width: 768px) {
-  .nav__toggler {
-    display: block;
-    cursor: pointer;
-  }
-  .nav__menu {
-    position: fixed;
-    top: 9vh;
-    right: 0;
-    height: 400px;
-    width: 200px;
-    background: rgb(255, 255, 255);
-    flex-direction: column;
-    transform: translateX(100%);
-    transition: 0.5s ease-in;
-    .inav__item {
-        width: auto;
-        height: 10px;
-      }
-  }
-}
-/* Active Class */
-.nav__active {
-  transform: translateX(0%);
-}
-
-/* Toggle Icon Animation */
-
-.toggle .line1 {
-  transform: rotate(-45deg) translate(-4px, 5px);
-}
-.toggle .line2 {
-  opacity: 0;
-}
-.toggle .line3 {
-  transform: rotate(45deg) translate(-4px, -5px);
-}
