--- a/src/Page/common/head/head.scss
+++ b/src/Page/common/head/head.scss
@@ -9,6 +9,9 @@
     align-items: center;
     font-size: 1.2rem;
     padding: 0 30px;
+    ul{
+        list-style: none;
+    }
 }
 .head_information_shop_cell{
     display: grid;
