--- a/src/Page/common/head/head.scss
+++ b/src/Page/common/head/head.scss
@@ -1,28 +1,33 @@
-.head_logo_shop_img{
+.head_logo_shop_img {
     height: 150px;
     width: 150px;
     margin: 20px 0 0 100px;
 }
-.head_container{
+
+.head_container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
     padding: 0 30px;
-    ul{
+
+    ul {
         list-style: none;
     }
 }
-.head_information_shop_cell{
+
+.head_information_shop_cell {
     display: grid;
-    grid-template-columns: repeat(3,auto);
+    grid-template-columns: repeat(3, auto);
     grid-gap: 20px;
 }
-.information_cell{
+
+.information_cell {
     display: flex;
 
 }
-.icon_head{
-    color: rgb(255, 193, 252);
+
+.icon_head {
+    color: #fcdede;
     margin-right: -30px;
 }
