--- a/src/Page/common/tavbar/navbar.scss
+++ b/src/Page/common/tavbar/navbar.scss
@@ -1,32 +1,34 @@
-
-.nav_container{
-    background-color: black;
-    color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.nav_container {
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.nav_container ul{
+
+.nav_container ul {
   display: flex;
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.nav_container li a{
+
+.nav_container li a {
   color: inherit;
   display: block;
   padding: 10px 15px;
   text-decoration: none;
 }
-.nav_container li:hover{
-  background-color: rgb(255, 193, 252);
+
+.nav_container li:hover {
+  background-color: #fcdede;
   color: black;
 }
-.nav_right{
+
+.nav_right {
   display: block;
   padding: 10px 15px;
-  background-color: rgb(255, 193, 252);
+  background-color: #fcdede;
   color: black;
   border-radius: 10px;
 }
-
