--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,8 @@
    v2.0 | 20110126
    License: none (public domain)
 */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Arsenal:wght@300;400;500;600;700;900&display=swap");
 
 html,
 body,
@@ -126,4 +128,13 @@ q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0;
+}
+
+body {
+  font-family: "Roboto", Sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
 }
