--- a/src/pages/common/header/header.scss
+++ b/src/pages/common/header/header.scss
@@ -63,12 +63,12 @@
             content: "";
             position: absolute;
             width: 100%;
-            height: 1px;
+            height: 2px;
             left: 0;
             bottom: 0;
           }
           &:hover::after,
-          &.active {
+          &.active::after {
             background-color: #ffffff;
           }
           & ~ .menu-child {
@@ -82,6 +82,7 @@
             background-color: #fff;
             font-size: 13px;
             display: none;
+            z-index: 9999;
             li:not(:last-child) {
               border-bottom: 1px solid #fcdede;
             }
