--- a/src/App.scss
+++ b/src/App.scss
@@ -138,3 +138,9 @@ a {
   text-decoration: none;
   color: #000000;
 }
+
+// Import Swiper styles
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
+@import "swiper/css/scrollbar";
