--- a/src/pages/service/service.scss
+++ b/src/pages/service/service.scss
@@ -5,6 +5,7 @@
     margin-right: auto;
     margin-left: auto;
     position: relative;
+    justify-content: center;
   }
   &-bg {
     background-color: #faf8f7;
