--- a/src/pages/common/backgroud/backgroud.scss
+++ b/src/pages/common/backgroud/backgroud.scss
@@ -1,20 +1,21 @@
-@keyframes moveImg {
-    from {
-        opacity: 0;
+.background {
+  position: relative;
+  &-swipper {
+  }
+  &-content {
+    position: absolute;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    padding: 50px;
+    text-align: center;
+    background-color: #fcdede57;
+    color: #fff;
+    border-radius: 8px;
+    img {
+      margin-bottom: 20px;
     }
-
-    to {
-        opacity: 1;
-    }
-}
-
-.container_imgRun {
-    position: relative;
-}
-
-.container_imgRun .imgRun {
-    max-width: 100%;
-    height: auto;
-    animation-name: moveImg;
-    animation-duration: 3s;
+  }
 }
