--- a/src/pages/common/backgroud/backgroud.scss
+++ b/src/pages/common/backgroud/backgroud.scss
@@ -1,6 +1,12 @@
 .background {
   position: relative;
   &-swipper {
+    &-show {
+      width: 100%;
+      height: 500px;
+      background-position: 50%;
+      background-size: cover;
+    }
   }
   &-content {
     position: absolute;
@@ -18,4 +24,21 @@
       margin-bottom: 20px;
     }
   }
+}
+
+/*Mobile resolution */
+@media only screen and (max-width: 767px) {
+  .background {
+    .background-content {
+      width: 95%;
+    }
+  }
+}
+
+/* Tablet resolution */
+@media (min-width: 768px) and (max-width: 1024px) {
+}
+
+/* > PC low resolution */
+@media (min-width: 1025px) {
 }
