--- a/src/pages/common/detail-consultation/detail-consultation.scss
+++ b/src/pages/common/detail-consultation/detail-consultation.scss
@@ -1,30 +1,52 @@
 .detail-consultation {
-  max-width: 450px;
-  background-color: #fff;
-  margin-right: auto;
-  margin-left: auto;
   position: relative;
-  padding: 30px;
-  .custom-input {
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border: none;
-    border-bottom: 1px solid #e2e8f0;
-    border-radius: 0;
-    padding-left: 4px;
-    &:focus {
-      box-shadow: none;
+  background-color: #faf8f7;
+  background-image: url("../../../assets/img/polaroid_home_04-1.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 100px 0px 100px 0px;
+  &-content {
+    max-width: 450px;
+    background-color: #fff;
+    margin-right: auto;
+    margin-left: auto;
+    position: relative;
+    padding: 30px;
+    .custom-input {
+      padding-top: 10px;
+      padding-bottom: 10px;
+      border: none;
+      border-bottom: 1px solid #e2e8f0;
+      border-radius: 0;
+      padding-left: 4px;
+      &:focus {
+        box-shadow: none;
+      }
+    }
+    .custom-button {
+      background-color: #fcdede !important;
+      color: #000000;
+      text-transform: uppercase;
+      &:hover {
+        color: #fff;
+      }
+    }
+    .ant-form-item-control-input-content {
+      text-align: center;
     }
   }
-  .custom-button {
-    background-color: #fcdede !important;
-    color: #000000;
-    text-transform: uppercase;
-    &:hover {
-      color: #fff;
+  .elementor-shape-bottom {
+    transform: rotate(180deg);
+    svg {
+      width: calc(100% + 1.3px);
+      height: 95px;
+      transform: translateX(0%) rotateY(180deg);
     }
   }
-  .ant-form-item-control-input-content {
-    text-align: center;
+  .elementor-shape-fill {
+    fill: #fff;
+    transform-origin: center;
+    transform: rotateY(0deg);
   }
 }
