--- a/src/pages/common/header/header.scss
+++ b/src/pages/common/header/header.scss
@@ -120,3 +120,23 @@
     }
   }
 }
+
+/*Mobile resolution */
+@media only screen and (max-width: 767px) {
+  .header-top-info,
+  .header-bottom {
+    display: none !important;
+  }
+}
+
+/* Tablet resolution */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .header-top-info,
+  .header-bottom {
+    display: none !important;
+  }
+}
+
+/* > PC low resolution */
+@media (min-width: 1025px) {
+}
