--- a/src/pages/service/service.scss
+++ b/src/pages/service/service.scss
@@ -41,6 +41,7 @@
   .elementor-shape-bottom {
     z-index: 2;
     pointer-events: none;
+    width: 100%;
   }
   .elementor-widget-container {
     margin-bottom: 20px;
