--- a/src/pages/common/footer/footer.scss
+++ b/src/pages/common/footer/footer.scss
@@ -1,77 +1,81 @@
 .container {
-    align-items: center;
+  align-items: center;
+}
+
+.footer {
+  background-color: #faf8f7;
 }
 
 .container {
-    .HeadTitle {
-        font-family: serif;
-        font-size: 20px;
-        font-weight: bolder;
-        margin-bottom: 25px;
-    }
+  .HeadTitle {
+    font-family: serif;
+    font-size: 20px;
+    font-weight: bolder;
+    margin-bottom: 25px;
+  }
 }
 
 .container ul {
-    list-style: none;
+  list-style: none;
 }
 
 .container ul a {
-    color: black;
-    text-decoration: none;
+  color: black;
+  text-decoration: none;
 }
 
 .container ul a:hover {
-    color: #fcdede
+  color: #fcdede;
 }
 
 .container li {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .footerIcon {
-    color: rgb(255, 167, 95);
-    margin-right: 10px;
+  color: rgb(255, 167, 95);
+  margin-right: 10px;
 }
 
 .ImageFooter {
-    width: 100px;
-    height: auto;
+  width: 100px;
+  height: auto;
 }
 
 .ContactFooter {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .inputFooter {
-    display: flex;
-    margin-top: 10px;
+  display: flex;
+  margin-top: 10px;
 
-    .footerIcon {
-        cursor: pointer;
-    }
+  .footerIcon {
+    cursor: pointer;
+  }
 }
 
 .input {
-    margin-right: 10px;
+  margin-right: 10px;
 
-    .inputCell {
-        border-radius: 5px;
-        border: 1px solid #ccc;
-        border-style: outset;
-        box-shadow: 2px 2xp 5px rgba(134, 134, 134, 1.0);
-    }
+  .inputCell {
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    border-style: outset;
+    box-shadow: 2px 2xp 5px rgba(134, 134, 134, 1);
+  }
 }
 
 .titleFooter {
-    margin-top: 20px;
+  margin-top: 20px;
 
-    span {
-        font-size: 15px;
-    }
+  span {
+    font-size: 15px;
+  }
 }
 
 .iconPublic {
-    display: flex;
-    cursor: pointer;
+  display: flex;
+  cursor: pointer;
 }
