--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,6 +1,10 @@
 .Cange {
     margin-bottom: 150px;
 }
+.img_home{
+    width: 400px;
+    height: auto;
+}
 .col,.textHome {
         h2 {
             margin-top: 30px;
