--- a/src/pages/album/Album.scss
+++ b/src/pages/album/Album.scss
@@ -1,5 +1,29 @@
 .album {
   &-detail {
     padding: 60px 0;
+    &-img {
+      width: 100%;
+      height: auto;
+    }
   }
+}
+
+.image-container {
+  position: relative;
+  display: inline-block;
+  perspective: 1000px; /* Điều chỉnh giá trị này để thay đổi độ lớn của hiệu ứng */
+}
+
+.image-container img {
+  transition: transform 0.4s ease;
+}
+
+.image-container:hover img {
+  transform: rotateY(20deg) rotateX(-20deg); /* Điều chỉnh góc quay theo ý muốn */
+  box-shadow: 0 20px 50px -10px rgba(0, 0, 0, 0.45),
+    0 50px 90px 0 rgba(51, 51, 51, 0.15);
+}
+
+.hovered {
+  z-index: 1;
 }
