--- a/src/pages/common/backgroud/backgroud.scss
+++ b/src/pages/common/backgroud/backgroud.scss
@@ -6,6 +6,9 @@
       height: 500px;
       background-position: 50%;
       background-size: cover;
+      &.home {
+        height: 950px;
+      }
     }
   }
   &-content {
