--- a/src/pages/common/commonService/CommonImage/commonImage.scss
+++ b/src/pages/common/commonService/CommonImage/commonImage.scss
@@ -1,4 +1,21 @@
-.container_card {
-    height: 450px;
-    width: 300px;
+.container_card_Service{
+    .container_img{
+        width: 400px;
+        height: 650px;
+        position: relative;
+        img{
+            display: block;
+            width: 100%;
+            height: 90%;
+        }
+        .Text_Service{
+            background-color: black;
+            text-align: center;
+            color: white;
+            font-size: 20px;
+            padding: 10px 0 10px 0;
+            text-transform: uppercase;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif,;
+        }
+    }
 }
