--- a/src/pages/service/service.scss
+++ b/src/pages/service/service.scss
@@ -9,7 +9,7 @@
   }
   &-bg {
     background-color: #faf8f7;
-    background-image: url("../../assets/img/service/adad.jpg");
+    // background-image: url("../../assets/img/service/adad.jpg");
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
