--- a/src/pages/common/commonContext/commonContext.scss
+++ b/src/pages/common/commonContext/commonContext.scss
@@ -2,7 +2,7 @@
   padding-bottom: 50px;
   .d-flex {
     .elementor-widget-container {
-      margin: -60px -80px -80px 10px;
+      //margin: -60px -80px -80px 10px;
       width: 100%;
       text-align: center;
     }
