--- a/src/pages/common/common_feedback/feedback.scss
+++ b/src/pages/common/common_feedback/feedback.scss
@@ -1,27 +1,32 @@
-.container{
-    &.feedback{
+.container {
+    &.feedback {
         margin-top: 100px;
         margin-bottom: 100px;
     }
 }
+
 .Content_Feedback {
     margin-bottom: 20px;
+
     h1 {
         font-size: 35px;
         font-weight: 400;
         font-family: "Arsenal", Sans-serif;
         margin-bottom: 20px;
     }
-    .box_content_feedback{
+
+    .box_content_feedback {
         display: flex;
         justify-content: space-between;
-        span{
+
+        span {
             font-size: 20px;
             font-weight: 400;
             line-height: 1.5;
             font-family: "Arsenal", Sans-serif;
         }
-        button{
+
+        button {
             border: 0px;
             background-color: #fcdede;
             padding: 10px 20px;
@@ -29,8 +34,21 @@
         }
     }
 }
-.LinePrice{
+
+.LinePrice {
     border: 0.3px solid #fcdede;
     margin-bottom: 20px;
     margin-top: 20px;
+}
+.background {
+    position: relative;
+    &-swipper {
+        &-feedback {
+            width: 100%;
+            height: 700px;
+            background-position: 50%;
+            background-size: cover;
+
+        }
+    }
 }
