--- a/src/pages/common/backgroud/backgroud.scss
+++ b/src/pages/common/backgroud/backgroud.scss
@@ -8,6 +8,8 @@
       background-size: cover;
       &.home {
         height: 800px;
+        background-position: 50%;
+        background-size: cover;
       }
     }
   }
